@@ -13,6 +13,7 @@ MovieJukebox 1.0.17 beta
   - Fixed defect #676 MovieMeterPlugin: problem when no movie duration is available
   - Fixed defect #677 Exception in MovieMeterPlugin
   - Fixed defect #678 Get Season 0 information from TheTVDB.com
+  - Fixed defect #688 index_sd.htm not transfered to output dir
 
 MovieJukebox 1.0.16 beta
 ------------------------
